force-app/src/objects/c2g__codaBankReconciliationCharge__c.object
<CustomObject>
    <customHelpPage>c2g__codahelpbankreconciliationcharge</customHelpPage>
    <description>Stores bank charge line item details on a bank reconciliation.</description>
    <fields>
        <fullName>c2g__BankReconciliation__c</fullName>
        <label>Bank Reconciliation</label>
        <referenceTo>c2g__codaBankReconciliation__c</referenceTo>
        <relationshipLabel>Bank Reconciliation Charges</relationshipLabel>
        <relationshipName>BankReconciliationCharges</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>c2g__Deposit__c</fullName>
        <label>Deposit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__Dimension1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 1</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>c2g__codaDimension1__c.c2g__Disabled__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>c2g__codaDimension1__c</referenceTo>
        <relationshipName>ReconciliationChargesLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Dimension2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 2</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>c2g__codaDimension2__c.c2g__Disabled__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>c2g__codaDimension2__c</referenceTo>
        <relationshipName>ReconciliationChargesLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Dimension3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 3</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>c2g__codaDimension3__c.c2g__Disabled__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>c2g__codaDimension3__c</referenceTo>
        <relationshipName>ReconciliationChargesLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__GeneralLedgerAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>General Ledger Account</label>
        <lookupFilter>
            <active>false</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>The selected GLA does not exist or is not valid. It must be a corporate GLA.</errorMessage>
            <filterItems>
                <field>c2g__codaGeneralLedgerAccount__c.c2g__ChartOfAccountsStructure__r.Name</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>c2g__codaGeneralLedgerAccount__c.c2g__ChartOfAccountsStructure__r.c2g__IsCorporate__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Bank Reconciliation Charges</relationshipLabel>
        <relationshipName>ReconciliationChargesLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__LineDescription__c</fullName>
        <label>Line Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>c2g__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bank Charges</fullName>
                </value>
                <value>
                    <fullName>Interest Paid</fullName>
                </value>
                <value>
                    <fullName>Interest Received</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__Value__c</fullName>
        <formula>c2g__Deposit__c - c2g__Withdrawal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__Withdrawal__c</fullName>
        <label>Withdrawal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Bank Reconciliation Charge</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Line ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bank Reconciliation Charges</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>